--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
-github: [kwsch]
+github: [kwsch, glazelf]
 patreon: glazelf
 custom: ['https://paypal.me/glazelf']
